force-app/main/default/objects/NVBug__c/NVBug__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : NV Bugs details for the Cases (Case, NVBugs URL)</description>
    <label>NVBug</label>
    <nameField>
        <label>NVBug ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NVBugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>