force-app/main/default/objects/NVBug__c/fields/ApplicationDivisionID__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDivisionID__c</fullName>
    <label>Application Division ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>