force-app/main/default/objects/NVBug__c/fields/ARB__c.field-meta.xml
<CustomField>
    <fullName>ARB__c</fullName>
    <defaultValue>&apos;Nilesh Adkar, Varun Kulkarni, Rajat Kamble&apos;</defaultValue>
    <inlineHelpText>Enter Comma separated person names</inlineHelpText>
    <label>ARB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>