force-app/main/default/objects/NVBug__c/fields/Bug_Action__c.field-meta.xml
<CustomField>
    <fullName>Bug_Action__c</fullName>
    <label>Bug Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QA - Closed - Verified</fullName>
                <default>true</default>
                <label>QA - Closed - Verified</label>
            </value>
            <value>
                <fullName>Dev - Open - To Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>