force-app/main/default/objects/NVBug__c/fields/BugType__c.field-meta.xml
<CustomField>
    <fullName>BugType__c</fullName>
    <label>Bug Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
                <default>true</default>
                <label>Software</label>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>