force-app/main/default/objects/NVBug__c/fields/Business_Units__c.field-meta.xml
<CustomField>
    <fullName>Business_Units__c</fullName>
    <label>Business Units</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
                <default>true</default>
                <label>IT</label>
            </value>
            <value>
                <fullName>PS3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>