force-app/main/default/objects/NVBug__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bugs Test TWO</fullName>
                <default>true</default>
                <label>Bugs Test TWO</label>
            </value>
            <value>
                <fullName>Wistron - VoW001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>