force-app/main/default/objects/NVBug__c/fields/CCGroups__c.field-meta.xml
<CustomField>
    <fullName>CCGroups__c</fullName>
    <defaultValue>&quot;*nvbugs developers&quot;</defaultValue>
    <label>CCGroups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>