force-app/main/default/objects/NVBug__c/fields/CCUsers__c.field-meta.xml
<CustomField>
    <fullName>CCUsers__c</fullName>
    <defaultValue>&quot;Nilesh Adkar, Gagandeep Brar&quot;</defaultValue>
    <label>CCUsers</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>