force-app/main/default/objects/NVBug__c/fields/Custom_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Custom_Keywords__c</fullName>
    <defaultValue>&quot;3DBD, 3DTV_Cert&quot;</defaultValue>
    <label>Custom Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>