force-app/main/default/objects/NVBug__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug - Fixed</fullName>
                <default>true</default>
                <label>Bug - Fixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>