force-app/main/default/objects/NVBug__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <defaultValue>&quot;Gagandeep Brar&quot;</defaultValue>
    <label>Engineer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>