force-app/main/default/objects/NVBug__c/fields/Geographic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Origin__c</fullName>
    <defaultValue>&quot;India, Pune&quot;</defaultValue>
    <label>Geographic Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>