force-app/main/default/objects/NVBug__c/fields/Is_Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>