force-app/main/default/objects/NVBug__c/fields/Module_Info__c.field-meta.xml
<CustomField>
    <fullName>Module_Info__c</fullName>
    <label>Module Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bugs Test</fullName>
                <default>true</default>
                <label>Bugs Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>