force-app/main/default/objects/NVBug__c/fields/NVBug_Count__c.field-meta.xml
<CustomField>
    <fullName>NVBug_Count__c</fullName>
    <description>To count up the number of NVBug records</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To count up the number of NVBug records</inlineHelpText>
    <label>NVBug Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>