force-app/main/default/objects/NVBug__c/fields/NVBug_Description__c.field-meta.xml
<CustomField>
    <fullName>NVBug_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>