force-app/main/default/objects/NVBug__c/fields/NVBug_Template__c.field-meta.xml
<CustomField>
    <fullName>NVBug_Template__c</fullName>
    <label>NVBug Template</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CUDA Software Bug Template (2869667)</fullName>
            </value>
            <value>
                <fullName>DGX-1 Hardware Bug Template (2016600)</fullName>
            </value>
            <value>
                <fullName>DGX-1 Software Bug Template (2048868)</fullName>
            </value>
            <value>
                <fullName>DGX-1V Hardware Bug Template (2678239)</fullName>
            </value>
            <value>
                <fullName>DGX-1V Software Bug Template (2706314)</fullName>
            </value>
            <value>
                <fullName>DGX-2 Hardware Bug Template (2419160)</fullName>
            </value>
            <value>
                <fullName>DGX-2 Software Bug Template (2419164)</fullName>
            </value>
            <value>
                <fullName>DGX A100 Hardware Bug Template (2846468)</fullName>
            </value>
            <value>
                <fullName>DGX A100 Software Bug Template (2846467)</fullName>
            </value>
            <value>
                <fullName>DGX Station A100 Hardware Bug Template (3306178)</fullName>
            </value>
            <value>
                <fullName>DGX Station A100 Software Bug Template (3306176)</fullName>
            </value>
            <value>
                <fullName>DGX-Station Hardware Bug Template (2017211)</fullName>
            </value>
            <value>
                <fullName>Drive Constellation Bug Template (2555861)</fullName>
            </value>
            <value>
                <fullName>Fleet Command Bug Template (3264042)</fullName>
            </value>
            <value>
                <fullName>GFN Services (1962402)</fullName>
            </value>
            <value>
                <fullName>GFN Services (200531155)</fullName>
            </value>
            <value>
                <fullName>GRID (2071819)</fullName>
            </value>
            <value>
                <fullName>Maglev (2715122)</fullName>
            </value>
            <value>
                <fullName>NGC Bug Template (2078324)</fullName>
            </value>
            <value>
                <fullName>NGC-Ready template (2869886)</fullName>
            </value>
            <value>
                <fullName>NVHeath Software Bug Template (2049396)</fullName>
            </value>
            <value>
                <fullName>Parabricks Bug Template (3145706)</fullName>
            </value>
            <value>
                <fullName>RMA EFFA Bug (2974386)</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server (2585486)</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server EMERGENCY Software Template (200531155)</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server Hardware (2585486)</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server Software Template (2732184)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>