force-app/main/default/objects/NVBug__c/fields/NVBug_URL__c.field-meta.xml
<CustomField>
    <fullName>NVBug_URL__c</fullName>
    <defaultValue>&apos;Refresh to get NVBug&apos;</defaultValue>
    <label>NVBug URL</label>
    <type>Url</type>
</CustomField>