force-app/main/default/objects/NVBug__c/fields/Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Operating_Systems__c</fullName>
    <label>Operating Systems</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 10</fullName>
                <default>true</default>
                <label>Windows 10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>