force-app/main/default/objects/NVBug__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unprioritized</fullName>
                <default>true</default>
                <label>Unprioritized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>