force-app/main/default/objects/NVBug__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CUDA</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>DRIVE Constellation</fullName>
            </value>
            <value>
                <fullName>Fleet Command</fullName>
            </value>
            <value>
                <fullName>GFN Services</fullName>
            </value>
            <value>
                <fullName>GRID</fullName>
            </value>
            <value>
                <fullName>NGC-Ready Systems</fullName>
            </value>
            <value>
                <fullName>Parabricks</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>