force-app/main/default/objects/NVBug__c/fields/QA_Engineer__c.field-meta.xml
<CustomField>
    <fullName>QA_Engineer__c</fullName>
    <defaultValue>&quot;Akash Pardeshi&quot;</defaultValue>
    <inlineHelpText>Enter comma separated names</inlineHelpText>
    <label>QA Engineer</label>
    <type>TextArea</type>
</CustomField>