force-app/main/default/objects/NVBug__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <defaultValue>$User.FirstName &amp; &apos; &apos; &amp;  $User.LastName</defaultValue>
    <label>Requestor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>