force-app/main/default/objects/NVBug__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-2204</description>
    <label>RMA</label>
    <referenceTo>RMA__c</referenceTo>
    <relationshipLabel>NVBugs</relationshipLabel>
    <relationshipName>NVBugs</relationshipName>
    <type>Lookup</type>
</CustomField>