force-app/main/default/objects/NVBug__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-System Crash</fullName>
            </value>
            <value>
                <fullName>2-Application Crash</fullName>
            </value>
            <value>
                <fullName>3-Functionality</fullName>
                <default>true</default>
                <label>3-Functionality</label>
            </value>
            <value>
                <fullName>4-Corruption</fullName>
            </value>
            <value>
                <fullName>5-Performance</fullName>
            </value>
            <value>
                <fullName>6-Enhancement</fullName>
            </value>
            <value>
                <fullName>7-Task Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>