force-app/main/default/objects/NVBug__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <defaultValue>&quot;NVBug from Salesforce&quot;</defaultValue>
    <label>Synopsis</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>