force-app/main/default/objects/NVBug__c/listViews/All_NVBugs.listView-meta.xml
<ListView>
    <fullName>All_NVBugs</fullName>
    <columns>NAME</columns>
    <columns>Synopsis__c</columns>
    <columns>Case__c</columns>
    <columns>NVBug_Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NVBug_URL__c</columns>
    <columns>Created_By_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All NVBugs</label>
</ListView>